--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,26 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    //Login
+    <string name="username_login">username</string>
+    <string name="password_login">password</string>
+    //Terms and conditions
+    <string name="terms_conditions">Terms and Conditions</string>
+    //Register
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="phone">Phone</string>
+    <string name="email">Email</string>
+    <string name="address">Address</string>
+    <string name="address_line2">Address (Line 2)</string>
+    <string name="postal">Postal/Zip Code</string>
+    <string name="password">Password</string>
+    //Type
+    <string name="student">Student</string>
+    <string name="neighbour">Neighbour</string>
+    //Profile
+    <string name="name">Bob Henniger</string>
+    <string name="school">Western Canada High School</string>
+    <string name="neighbourhood">Garrison</string>
+    <string name="bio">Hi, I\'m from WCHS and I\'m looking for work near me. I can babysit and stuff so that\'s pretty cool. I\'m not sure what to write here, but since this a place holder that\'s okay</string>
 </resources>
